added all word search