@@ -102,7 +102,6 @@ public class Context_box {
 			ArrayList< Pair<Integer,ArrayList<Integer> > > as = hm1.get(str);
 			for(Pair<Integer,ArrayList<Integer> > o : as)
 			{
-				//System.out.println(o.getFirst());
 				As.add("hello/"+hm2.get(o.getFirst()));
 			}
 		}
@@ -181,6 +180,7 @@ public class Context_box {
 					if(a22 ==-1 || a33 == -1 || a44 == -1)
 						continue;
 					result.add("hello/"+hm2.get(pp.getFirst()));
+					break;
 					
 				}
 				
@@ -209,7 +209,7 @@ public class Context_box {
 				int a2 = index(as2,(int)pp.getFirst());
 			//	System.out.print(hm2.get(pp.getFirst()));
 				int a3 = index(as3,(int)pp.getFirst());
-			//	System.out.println(" "+a2+" "+a3);
+				System.out.println(pp.getFirst());
 				if(a2 == -1 || a3 == -1)
 					continue;
 				//System.out.println(hm2.get(pp.getFirst()));
@@ -218,9 +218,10 @@ public class Context_box {
 					int a22 = index1(as2.get(a2).getSecond(),i+1);
 					int a33 = index1(as3.get(a3).getSecond(),i+2);
 				//	int a44 = index1(as4.get(a4).getSecond(),i+3);
-					if(a22 ==-1 || a33 == -1)
+					if(a22 == -1 || a33 == -1)
 						continue;
 					result.add("hello/"+hm2.get((int)pp.getFirst()));
+					break;
 					
 				}
 				
@@ -236,37 +237,43 @@ public class Context_box {
 	
 	ArrayList<String> search2(String str)
 	{
-		String tokens[] = str.split(" ");
-		int size = tokens.length;
-		//System.out.println(tokens[1]);
 		ArrayList<String> result = new ArrayList<String>();
-		ArrayList< Pair<Integer,ArrayList<Integer> > > as1 = hm1.get(tokens[0]);
-		ArrayList< Pair<Integer,ArrayList<Integer> > > as2 = hm1.get(tokens[1]);
-		//System.out.println(as1.size() + " " + as2.size());
-		for(Pair<Integer,ArrayList<Integer> > pp1 : as1)
+		try
 		{
-			ArrayList<Integer> ass1 = pp1.getSecond();
-			//System.out.println(pp1.getFirst());
-			for(Integer ppp1 : ass1)
+			String words[] = str.split(" ");
+			ArrayList<Pair<Integer,ArrayList<Integer> > > as1 = hm1.get(words[0]);
+			ArrayList<Pair<Integer,ArrayList<Integer> > > as2 = hm1.get(words[1]);
+			//ArrayList<Pair<Integer,ArrayList<Integer> > > as3 = hm1.get(words[2]);
+			//ArrayList<Pair<Integer,ArrayList<Integer> > > as4 = hm1.get(words[3]);
+			//System.out.println(as4.get(0).getFirst());
+			for(Pair<Integer,ArrayList<Integer> > pp : as1)
 			{
-				//System.out.print(ppp1+" ");
-				for(Pair<Integer,ArrayList<Integer> > pp2 : as2)
+				int a2 = index(as2,(int)pp.getFirst());
+				System.out.println(pp.getFirst());
+			//	System.out.print(hm2.get(pp.getFirst()));
+				//int a3 = index(as3,(int)pp.getFirst());
+			//	System.out.println(" "+a2+" "+a3);
+				if(a2 == -1 )
+					continue;
+				//System.out.println(hm2.get(pp.getFirst()));
+				for(int i : pp.getSecond())
 				{
-					//System.out.println(pp2.getFirst()+ " " + pp1.getFirst());
-					if(pp1.getFirst().hashCode() == pp2.getFirst().hashCode())
-					{
-				//		System.out.println("yoyoyb");
-						ArrayList<Integer> ass2 = pp2.getSecond();
-						for(Integer ppp2: ass2)
-						{
-							if(ppp1 == ppp2-1)
-							{
-								result.add("hello/"+hm2.get(pp1.getFirst()));
-							}
-						}
-					}
+					int a22 = index1(as2.get(a2).getSecond(),i+1);
+				//	int a33 = index1(as3.get(a3).getSecond(),i+2);
+				//	int a44 = index1(as4.get(a4).getSecond(),i+3);
+					if(a22 == -1)
+						continue;
+					result.add("hello/"+hm2.get((int)pp.getFirst()));
+					break;
+					
 				}
+				
+				
 			}
+		}
+		catch(Exception e)
+		{
+			
 		}
 		return result;
 	}
